--- a/HW2/task1/task1.html
+++ b/HW2/task1/task1.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <script src="task1.js"></script>
-        <script src="task2.js"></script>
+        <script src="test.js"></script>
     </body>
 </html>
