--- a/HW2/task1/task1.html
+++ b/HW2/task1/task1.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>H/W2</title>
-    </head>
-    <body>
-        <script src="task1.js"></script>
-        <script src="test.js"></script>
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>H/W2</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mocha/mocha.css">
+  <script src="https://cdn.jsdelivr.net/npm/mocha/mocha.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.3.4/chai.min.js"></script>
+</head>
+<body>
+  <div id="mocha"></div> <!-- Mocha will render test results here -->
+  <script src="task1.js"></script>
+  <script src="tests.js"></script>
+</body>
 </html>
