--- a/HW3/task2/task1.html
+++ b/HW3/task2/task1.html
@@ -11,6 +11,6 @@
 <body>
   <div id="mocha"></div> <!-- Mocha will render test results here -->
   <script src="task2.js"></script>
-  <script src="tests2.js"></script>
+  <script src="task2tests.js"></script>
 </body>
 </html>
