--- a/HW7/task2/task2.html
+++ b/HW7/task2/task2.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>H/W7</title>
-        <link href="https://fonts.googleapis.com/css2?family=Wallpoet&display=swap;" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300..700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../shared/reset.css">
         <link rel="stylesheet" href="task2.css">
