--- a/HW7/task2/task2.html
+++ b/HW7/task2/task2.html
@@ -9,20 +9,20 @@
     </head>
     <body>
         <div class="timer">
-            <div id="timer-value" class="numbers">00:00</div>
+            <div id="timer-value" class="numbers">59:59</div>
             <div class="controls">
-                <input type="number" id="minutes" min="0" max="60">
-                <input type="number" id="seconds" min="0" max="60">
-                <div id="set-timer" class="button">SET</div>
-                <div id="reset-timer" class="button">RESET</div>
+                <input id="input-minutes">
+                <input id="input-seconds">
+                <div id="timer-set" class="button">SET</div>
+                <div id="timer-reset" class="button">RESET</div>
             </div>
         </div>
         <div class="stopwatch">
             <div id="stopwatch-value" class="numbers">00:00</div>
             <div class="controls">
-                <div id="start-stopwatch" class="button">START</div>
-                <div id="pause-stopwatch" class="button">PAUSE</div>
-                <div id="reset-stopwatch" class="button">RESET</div>
+                <div id="stopwatch-start" class="button">START</div>
+                <div id="stopwatch-pause" class="button">PAUSE</div>
+                <div id="stopwatch-reset" class="button">RESET</div>
             </div>
         </div>
         <script src="task2.js"></script>
